--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <h1 style="text-align: center;">Bem Vindo a minha página</h1>
 
         <p style="text-align: center;">Olá, meu nome é Bárbara Zamperete e eu sou estudante de Ciência da Computação</p>
+        <p style="text-align: center;">:)</p>
     </body>
 </html>
