--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="conteudo" id="resposta">
         <p id="imc_resposta">0</p>
     </div>  
-    <script">
+    <script>
             function imc_cal(){
                 let peso = Number(window.document.getElementById("peso").value)
                 let altura = Number(window.document.getElementById("altura").value)
