--- a/index.html
+++ b/index.html
@@ -65,21 +65,6 @@
     <div class="conteudo" id="resposta">
         <p id="imc_resposta">0</p>
     </div>  
-    <script>
-            function imc_cal(){
-                let peso = Number(window.document.getElementById("peso").value)
-                let altura = Number(window.document.getElementById("altura").value)
-                let imc =  peso / (altura * altura)
-                let res = window.document.getElementById("imc_resposta")
-                if (peso === 0 || altura === 0){
-                    //window.alert("Preencha dos os campos")
-                    //window.document.getElementById("peso").style.backgroundColor = 'red'
-                }else{
-                    res.textContent = imc.toFixed(2)
-                }
-
-
-            }
-    </script>
+    <script src="script_IMC.js"></script>
 </body>
 </html>
