--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
     <div class="conteudo" id="resposta">
         <p id="imc_resposta">0</p>
     </div>  
-    <script src="script_IMC.js"></script>
+    <script src="script_IMC.js" type="text/javascript"></script>
 </body>
 </html>
