--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             align-self: center;
         }
         input[type=number] {
-            width: 20%;
+            width: 80%;
+            max-width: 230px;
             padding: 12px 20px;
             margin: 8px 0;
             box-sizing: border-box;
@@ -56,10 +57,10 @@
 </head>
 <body>
     <h1>Calculadora de IMC</h1>
-    <h3 class="conteudo">Digite a sua altura em metros:</h3> 
-    <input class="conteudo" type="number" name="altura" id="altura">
     <h3 class="conteudo">Digite o seu peso em quilogramas:</h3>
     <input class="conteudo" type="number" name="peso" id="peso">
+    <h3 class="conteudo">Digite a sua altura em metros:</h3> 
+    <input class="conteudo" type="number" name="altura" id="altura">
     <br>
     <input class="conteudo" type="button" name="resultado" value="Calcular" onclick="imc_cal()">
     <div class="conteudo" id="resposta">
