--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             width: 80%;
             max-width: 230px;
             padding: 12px 20px;
+            background-color: white;
             margin: 8px 0;
             box-sizing: border-box;
             font-size: 20px;
