--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             align-self: center;
         }
         h1{
-            font-size: 50pt;
+            font-size: 5vw;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
         .conteudo{
