--- a/index.html
+++ b/index.html
@@ -1,60 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+<head>  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styleMy.css">
     <title>Calcular IMC</title>
-    <style type="text/css">
-        body{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: rgb(178, 202, 223);
-            align-self: center;
-        }
-        h1{
-            font-size: 5vw;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        .conteudo{
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-            margin: 10pt;
-        }
-        #resposta{
-            height: 70px;
-            width: 100px;
-            background-color: white;
-            border-color: black;
-            border-width: 5px;
-            display: flex;
-            justify-content: center;
-        }
-        #imc_resposta{
-            font-size: 20px;
-            align-self: center;
-        }
-        input[type=number] {
-            width: 80%;
-            max-width: 230px;
-            padding: 12px 20px;
-            background-color: white;
-            margin: 8px 0;
-            box-sizing: border-box;
-            font-size: 20px;
-            
-        }
-        input[type=button]{
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 16px 32px;
-            text-decoration: none;
-            margin: 4px 2px;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
     <h1>Calculadora de IMC</h1>
