--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 </head>
 <body>
     <h1>Calculadora de IMC</h1>
-    <h3 class="conteudo">Digite o seu peso em quilogramas:</h3>
-    <input class="conteudo" type="number" name="peso" id="peso">
-    <h3 class="conteudo">Digite a sua altura em metros:</h3> 
-    <input class="conteudo" type="number" name="altura" id="altura">
-    <br>
-    <input class="conteudo" type="button" name="resultado" value="Calcular" onclick="imc_cal()">
-    <div class="conteudo" id="resposta">
-        <p id="imc_resposta">0</p>
-    </div>  
-    <script src="script_IMC.js" type="text/javascript"></script>
+    <form >
+        <label for="fpeso">Digite o seu peso em quilogramas</label><br>
+        <input type="number" step=0.1 min=0 id="inPeso" placeholder="Ex: 60"><br>
+        <label for="faltura">Digite a sua altura em metros</label><br>
+        <input type="number" step=0.01 min=1 max="3" id="inAltura" placeholder="Ex: 1,72"><br>
+        <input type="button" value="Calcular" onclick="imc_cal()">
+    </form>
+    <p id="resposta">0</p>
+    <p id="classifica"></p>
+    <div id="res_container">
+        <div id="baixo"></div>
+        <div id="medio"></div>
+        <div id="alto"></div>
+        
+    </div>
+    <script src="action_submit.js"></script>
 </body>
 </html>
