--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Calculadora de IMC</h1>
-    <form >
+    <form autocomplete="on" name="imc">
         <label for="fpeso">Digite o seu peso em quilogramas</label><br>
         <input type="number" step=0.1 min=0 id="inPeso" placeholder="Ex: 60"><br>
         <label for="faltura">Digite a sua altura em metros</label><br>
