--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <input type="number" step=0.1 min=0 id="inPeso" placeholder="Ex: 60"><br>
         <label for="faltura">Digite a sua altura em metros</label><br>
         <input type="number" step=0.01 min=1 max="3" id="inAltura" placeholder="Ex: 1,72"><br>
-        <input type="submit" value="Calcular">
+        <!--<input type="submit" value="Calcular">!-->
+        <input type="button" value="Calcular" onclick="imc_cal()" >
     </form>
     <p id="resposta">0</p>
     <p id="classifica"></p>
